# 3D-Scanning-Motion-Capture

./: .gitignore  README.md
Body-Animation/: project_proposal.tex
Exercise_1/: .gitignore  Exercise_1.sln  Exercise_1.vcxproj  Exercise_1.vcxproj.filters  Makefile  VirtualSensor.h  main.cpp  off_sample.off
Exercise_2/: Exercise_2.sln  Exercise_2.vcxproj  Exercise_2.vcxproj.filters  ImplicitSurface.h  Makefile  MarchingCubes.h  main.cpp  result.off  torus.off
Exercise_2/data/: pointcloud.off
Exercise_3/: Exercise_3.sln  plot_dragon.py  plot_gaussian.py  plot_surface.py
Exercise_3/Dragon/: Dragon.vcxproj  Dragon.vcxproj.filters  dragon.cpp
Exercise_3/Gaussian/: Gaussian.vcxproj  Gaussian.vcxproj.filters  gaussian.cpp
Exercise_3/Surface/: Surface.vcxproj  Surface.vcxproj.filters  surface.cpp
Exercise_3/data/: points_dragon_1.txt  points_dragon_2.txt  points_gaussian.txt  points_surface.txt  weights_dragon.txt
Exercise_4/: CMakeLists.txt  Exercise_4.sln  Exercise_4.vcxproj  Exercise_4.vcxproj.filters  ICPOptimizer.h  PointCloud.h  ProcrustesAligner.h  linux_installation.txt  main.cpp
Exercise_4/data/bunny/: bunny_part1.off  bunny_part2_trans.off  bunny_trans.off
Exercise_4/results/: bunny_icp.off  bunny_procrustes.off
Face-Reconstruction/: project_proposal.bib  project_proposal.tex
Face-Reconstruction/Literature/: 3D-Scanning.bib
Kickinect Simulator 2019/ProjectSettings/: ProjectSettings.asset
Second-Proposal/: project_proposal.bib  project_proposal.tex
proposal template/: project_proposal.bib  project_proposal.tex
(+11 files in other folders)
